--- a/src/components/NotificationsPage.css
+++ b/src/components/NotificationsPage.css
@@ -206,7 +206,7 @@
   width: 50px;
   height: 50px;
   border-radius: 100px;
-  overflow: hidden;
+  overflow: clip;
   flex-shrink: 0;
 }
 
